# python_homework_01

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: main.yml
config/: config.json
data/: config.json
log_analyzer/: entities.py  log_analyzer.py
tests/: entities_test.py  log_analyzer_test.py
