[project]
name = "python-homework-01"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest>=8.4.1",
    "structlog>=25.4.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "mypy>=1.17.1",
    "ruff>=0.12.7",
]

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.format]
line-ending = "lf"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
